tests/integration/snapshots/wrapper/test_wrapper_for_boc_contract_with_invalid_types_file_reports_error/stderr.txt
Error: Failed to compile types file [ROOT]/contracts/precompiled.types.tolk for precompiled: [ROOT]/contracts/precompiled.types[LINE]: error: unknown type name `MissingMessage`
   3 |     incomingMessages: MissingMessage
     |                       ^^^^^^^^^^^^^^
